# todoListMulTek

back/golang/: .env  go.mod  go.sum  magefile.go  main.go
back/golang/server/: app.go
back/golang/server/api/: utils.go
back/golang/server/api/todo/: controller.go  dto.go  routes.go
back/golang/server/models/: todo.go
back/java/: build.gradle
back/java/src/main/resources/: application.properties
back/kotlin/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
back/kotlin/src/main/kotlin/example/com/: Application.kt
back/kotlin/src/main/kotlin/example/com/plugins/: Databases.kt  TodoSchema.kt
back/kotlin/src/main/kotlin/multek/com/: Application.kt
back/kotlin/src/main/kotlin/multek/com/models/: Todo.kt
back/kotlin/src/main/resources/: application.yaml
back/kotlin/src/test/kotlin/multek/com/: ApplicationTest.kt
back/nodejs/: drizzle.config.ts  package.json  pnpm-lock.yaml
back/nodejs/drizzle/: 0000_naive_lyja.sql
back/nodejs/drizzle/meta/: 0000_snapshot.json  _journal.json
back/nodejs/src/: app.module.ts  main.ts
back/nodejs/src/database/: database.module.ts  index.ts  schema.ts
back/nodejs/src/todo/: todo.controller.ts  todo.module.ts  todo.service.ts  todo.validator.ts
back/rust/: .env  Cargo.toml  diesel.toml
back/rust/migrations/2024-07-26-095813_init_todo/: down.sql  up.sql
back/rust/src/: main.rs
back/rust/src/database/: lib.rs  mod.rs  schema.rs
back/rust/src/models/: todo.rs
back/rust/src/todo/: controller.rs  mod.rs  models.rs  router.rs  service.rs
(+11 files in other folders)
