[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
validator = { version = "0.18.1", features = ["derive"] }
